[gd_scene load_steps=4 format=3 uid="uid://cqtsafcakt3gm"]

[ext_resource type="Script" path="res://scenes/enemy/drone.gd" id="1_q4rkt"]
[ext_resource type="Texture2D" uid="uid://b57vv06hxn2n2" path="res://graphics/enemies/drone.png" id="1_x02sm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nlysh"]
radius = 75.9539

[node name="Drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_q4rkt")

[node name="DroneImage" type="Sprite2D" parent="."]
position = Vector2(1, 4)
texture = ExtResource("1_x02sm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nlysh")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
